--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "NPM basics",
   "main": "index.js",
   "scripts": {
-
     "start": "node js/index.js"
-    
   },
   "repository": {
     "type": "git",
@@ -22,8 +20,8 @@
     "express": "^4.18.2",
     "joi": "^17.8.1",
     "nanoid": "^4.0.1"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.18.6"
   }
 }
-
-
-
