--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "npm-webpack",
+  "name": "y",
   "version": "1.0.0",
-  "description": "NPM basics",
-  "main": "index.js",
+  "description": "learning npm webpack",
+  "main": "server.js",
   "scripts": {
-    "start": "node js/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/momotvit/npm-webpack.git"
   },
-  "author": "momotvit",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/momotvit/npm-webpack/issues"
   },
-  "homepage": "https://github.com/momotvit/npm-webpack#readme",
-  "dependencies": {
-    "express": "^4.18.2",
-    "joi": "^17.8.1",
-    "nanoid": "^4.0.1"
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.18.6"
-  }
+  "homepage": "https://github.com/momotvit/npm-webpack#readme"
 }
