--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "learning npm webpack",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "babel src -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/momotvit/npm-webpack/issues"
   },
-  "homepage": "https://github.com/momotvit/npm-webpack#readme"
+  "homepage": "https://github.com/momotvit/npm-webpack#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "joi": "^17.8.3",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2"
+  }
 }
